--- a/moj-profil.html
+++ b/moj-profil.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Moj profil - Lokalni Plodovi</title>
-  <link rel="icon" href="data:;base64,iVBORw0KGgo="> <!-- sprečava favicon 404 -->
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f8f8f8; color: #333; }
     header { background: #4CAF50; color: white; padding: 15px; text-align: center; }
@@ -13,13 +12,20 @@
     nav a { color: white; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     main { max-width: 800px; margin: 30px auto; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-    h1 { color: #4CAF50; text-align: center; }
+    h1, h2 { color: #4CAF50; text-align: center; }
     #loading-text { text-align: center; font-size: 1.2em; color: #777; margin: 40px 0; }
-    .profil-info { font-size: 1.1em; line-height: 1.6; }
+    .profil-info { font-size: 1.1em; line-height: 1.6; margin-bottom: 30px; }
     .profil-info p { margin: 10px 0; }
     .profil-info strong { color: #4CAF50; }
-    #logout-btn { display: block; margin: 30px auto; padding: 12px 30px; background: #e74c3c; color: white; border: none; border-radius: 6px; font-size: 1.1em; cursor: pointer; }
+    .nise-list { margin-left: 20px; }
+    .form-group { margin-bottom: 20px; }
+    label { display: block; margin-bottom: 6px; font-weight: bold; }
+    input, textarea { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
+    button { padding: 12px; background: #4CAF50; color: white; border: none; border-radius: 6px; font-size: 1.1em; cursor: pointer; }
+    button:hover { background: #45a049; }
+    #logout-btn { background: #e74c3c; }
     #logout-btn:hover { background: #c0392b; }
+    #slika-preview { max-width: 200px; margin-top: 10px; }
     footer { text-align: center; padding: 20px; background: #333; color: white; margin-top: 40px; }
   </style>
 </head>
@@ -33,7 +39,7 @@
         <li><a href="prodavci.html">Svi prodavci</a></li>
         <li><a href="mapa.html">Mapa</a></li>
         <li><a href="chat.html">Chat</a></li>
-        <li><a href="login.html">Prijavi se</a></li>
+        <li><a href="prijavi-se.html">Prijavi se</a></li>
         <li><a href="registracija.html">Postani prodavac</a></li>
       </ul>
     </nav>
@@ -52,6 +58,58 @@
       <p><strong>Opis:</strong> <span id="user-opis">---</span></p>
       <p><strong>Niše:</strong> <ul id="user-nise"></ul></p>
     </div>
+
+    <h2>Izmeni profil</h2>
+    <form id="update-form">
+      <div class="form-group">
+        <label for="update-ime">Ime</label>
+        <input type="text" id="update-ime" />
+      </div>
+      <div class="form-group">
+        <label for="update-telefon">Telefon</label>
+        <input type="tel" id="update-telefon" />
+      </div>
+      <div class="form-group">
+        <label for="update-lokacija">Lokacija</label>
+        <input type="text" id="update-lokacija" />
+      </div>
+      <div class="form-group">
+        <label for="update-opis">Opis</label>
+        <textarea id="update-opis"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="update-slika">Upload slike profila</label>
+        <input type="file" id="update-slika" accept="image/*" />
+        <img id="slika-preview" src="" alt="Preview" style="display: none;" />
+      </div>
+      <button type="submit">Sačuvaj izmene</button>
+    </form>
+
+    <p id="update-poruka"></p>
+
+    <h2>Dodaj proizvod</h2>
+    <form id="add-proizvod-form">
+      <div class="form-group">
+        <label for="proizvod-naziv">Naziv proizvoda</label>
+        <input type="text" id="proizvod-naziv" required />
+      </div>
+      <div class="form-group">
+        <label for="proizvod-opis">Opis</label>
+        <textarea id="proizvod-opis" required></textarea>
+      </div>
+      <div class="form-group">
+        <label for="proizvod-cena">Cena</label>
+        <input type="number" id="proizvod-cena" required />
+      </div>
+      <div class="form-group">
+        <label for="proizvod-slika">Upload slike proizvoda</label>
+        <input type="file" id="proizvod-slika" accept="image/*" />
+        <img id="proizvod-slika-preview" src="" alt="Preview" style="display: none;" />
+      </div>
+      <button type="submit">Dodaj proizvod</button>
+    </form>
+
+    <p id="add-proizvod-poruka"></p>
 
     <button id="logout-btn">Odjavi se</button>
   </main>
@@ -73,9 +131,9 @@
       if (loading) loading.textContent = 'Proveravam prijavu...';
 
       if (!token || !userStr) {
-        console.log('Nema tokena ili user podataka');
+        console.log('Nema tokena – preusmeravam na login');
         if (loading) loading.textContent = 'Niste prijavljeni. Preusmeravam na login...';
-        setTimeout(() => window.location.href = 'prijavi-se.html', 2000);
+        setTimeout(() => window.location.href = 'login.html', 2000);
         return;
       }
 
@@ -92,7 +150,7 @@
       if (loading) loading.textContent = '';
       if (podaciDiv) podaciDiv.style.display = 'block';
 
-      document.getElementById('user-ime')?.textContent = user.ime || user.email?.split('@')[0] || 'Korisnik';
+      document.getElementById('user-ime')?.textContent = user.ime || 'Korisnik';
       document.getElementById('user-email')?.textContent = user.email || 'Nema emaila';
       document.getElementById('user-telefon')?.textContent = user.telefon || '---';
       document.getElementById('user-lokacija')?.textContent = user.lokacija || '---';
@@ -111,16 +169,18 @@
         });
       }
 
+      // Logout
       document.getElementById('logout-btn')?.addEventListener('click', () => {
         localStorage.removeItem('authToken');
         localStorage.removeItem('user');
-        window.location.href = 'prijavi-se.html';
+        window.location.href = 'login.html';
       });
     });
   </script>
 
 </body>
 </html>
+
 
 
 
