--- a/moj-profil.html
+++ b/moj-profil.html
@@ -39,7 +39,7 @@
         <li><a href="prodavci.html">Svi prodavci</a></li>
         <li><a href="mapa.html">Mapa</a></li>
         <li><a href="chat.html">Chat</a></li>
-        <li><a href="prijavi-se.html">Prijavi se</a></li>
+        <li><a href="login.html">Prijavi se</a></li>
         <li><a href="registracija.html">Postani prodavac</a></li>
       </ul>
     </nav>
@@ -180,6 +180,7 @@
 
 </body>
 </html>
+
 
 
 
