--- a/moj-profil.html
+++ b/moj-profil.html
@@ -143,15 +143,11 @@
     <p style="margin-top:2rem; opacity:0.9;">© 2025 LokalniPlodovi • Sva prava zadržana</p>
   </div>
 </footer>
-
 <script>
-  const backendUrl = 'https://lokalni-backend.onrender.com'; // ← PROMENI AKO JE DRUGAČIJI
+  const backendUrl = 'https://lokalni-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL (npr. https://tvoj-backend.onrender.com)
 
-  async function ucitajProfil() {
+  function azurirajHeader() {
     const token = localStorage.getItem('token');
-    const profilInfo = document.getElementById('profil-info');
-
-    // Menjaj header na osnovu tokena
     if (token) {
       document.getElementById('moj-profil-li').style.display = 'list-item';
       document.getElementById('odjavi-se-li').style.display = 'list-item';
@@ -163,6 +159,13 @@
       document.getElementById('prijavi-se-li').style.display = 'list-item';
       document.getElementById('postani-prodavac-li').style.display = 'list-item';
     }
+  }
+
+  async function ucitajProfil() {
+    azurirajHeader(); // ažuriraj header odmah
+
+    const token = localStorage.getItem('token');
+    const profilInfo = document.getElementById('profil-info');
 
     if (!token) {
       profilInfo.innerHTML = `<p>Niste ulogovani. <a href="registracija.html">Registrujte se</a> ili <a href="login.html">prijavite se</a>.</p>`;
@@ -207,8 +210,10 @@
 
   document.addEventListener('DOMContentLoaded', ucitajProfil);
 </script>
+
 </body>
 </html>
+
 
 
 
