--- a/registracija.html
+++ b/registracija.html
@@ -286,79 +286,56 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 <script>
-document.getElementById('registration-form').addEventListener('submit', async function(e) {
-  e.preventDefault();
-  console.log('Submit događaj pokrenut – preventDefault uspeo');
+  document.getElementById('registration-form').addEventListener('submit', async function(e) {
+    e.preventDefault();
 
-  const poruka = document.getElementById('poruka');
-  if (poruka) {
-    poruka.textContent = 'Šaljem na server...';
-    poruka.style.color = 'blue';
-  } else {
-    console.warn('Element #poruka ne postoji – dodaj ga u HTML!');
-  }
+    const data = {
+      ime: document.getElementById('ime').value.trim(),
+      email: document.getElementById('email').value.trim(),
+      lozinka: document.getElementById('lozinka').value.trim(),
+      telefon: document.getElementById('telefon').value.trim(),
+      lokacija: document.getElementById('lokacija').value.trim(),
+      nise: Array.from(document.querySelectorAll('input[name="nise"]:checked')).map(cb => cb.value),
+      opis: document.getElementById('opis').value.trim()
+    };
 
-  const podaci = {
-    ime: document.getElementById('ime')?.value.trim() || '',
-    email: document.getElementById('email')?.value.trim() || '',
-    lozinka: document.getElementById('lozinka')?.value || '',
-    telefon: document.getElementById('telefon')?.value.trim() || '',
-    lokacija: document.getElementById('lokacija')?.value.trim() || '',
-    nise: Array.from(document.querySelectorAll('input[name="nise"]:checked')).map(cb => cb.value),
-    opis: document.getElementById('opis')?.value.trim() || ''
-  };
+    console.log('Šaljem podatke na backend:', data); // za proveru u konzoli
 
-  console.log('Podaci koji se šalju:', podaci);
+    try {
+      const response = await fetch('https://tvoj-backend.onrender.com/register', { // ← TVOJ PRAVI RENDER URL
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(data)
+      });
 
-  try {
-    console.log('Šaljem fetch na backend...');
-    const response = await fetch('https://lokalni-backend.onrender.com/register', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(podaci)
-    });
+      console.log('Status odgovora:', response.status); // za proveru
 
-    console.log('Fetch završen, status:', response.status);
+      const result = await response.json();
 
-    const data = await response.json();
-    console.log('Odgovor od servera:', data);
+      console.log('Odgovor od servera:', result); // ← OVO JE KLJUČNO – vidi šta backend vraća
 
-    if (!response.ok) {
-     //
-      localStorage.setItem('token', result.token);
-  console.log('Token sačuvan:', result.token); // za proveru u konzoli
+      if (response.ok) {
+        if (!result.token) {
+          throw new Error('Backend nije vratio token!');
+        }
 
-  alert('Registracija uspešna!');
-  window.location.href = 'moj-profil.html';
-      throw new Error(data.error || 'Greška na serveru (status ' + response.status + ')');
+        localStorage.setItem('token', result.token);
+        console.log('Token sačuvan:', result.token);
+
+        alert('Registracija uspešna!');
+        window.location.href = 'moj-profil.html';
+      } else {
+        alert(result.error || 'Greška pri registraciji (status: ' + response.status + ')');
+      }
+    } catch (err) {
+      console.error('Greška u fetch-u:', err);
+      alert('Greška sa serverom: ' + err.message);
     }
-
-    if (poruka) {
-      poruka.style.color = 'green';
-      poruka.textContent = data.message || 'Registracija uspešna!';
-    }
-
-    localStorage.setItem('authToken', data.token);
-    localStorage.setItem('user', JSON.stringify(data.user));
-    console.log('Token i user sačuvani u localStorage');
-
-    console.log('Čekam 1.5 sekundi pa preusmeravam...');
-    setTimeout(() => {
-      console.log('Preusmeravanje pokrenuto');
-      window.location.href = 'moj-profil.html';
-    }, 1500);
-
-  } catch (err) {
-    console.error('Greška u fetch-u ili obradi:', err);
-    if (poruka) {
-      poruka.style.color = 'red';
-      poruka.textContent = err.message || 'Nešto nije u redu';
-    }
-  }
-});
+  });
 </script>
 </body>
 </html>
+
 
 
 
