--- a/registracija.html
+++ b/registracija.html
@@ -302,7 +302,7 @@ s0.parentNode.insertBefore(s1,s0);
     console.log('Šaljem podatke na backend:', data); // za proveru u konzoli
 
     try {
-      const response = await fetch('https:// https://lokalni-backend.onrender.com/register', { // ← TVOJ PRAVI RENDER URL
+      const response = await fetch('https://lokalni-backend.onrender.com/register', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(data)
@@ -335,6 +335,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 </body>
 </html>
+
 
 
 
