--- a/login.html
+++ b/login.html
@@ -3,114 +3,90 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Prijava - Lokalni Plodovi</title>
+  <title>Prijavi se – LokalniPlodovi</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f8f8f8; color: #333; }
-    header { background: #4CAF50; color: white; padding: 15px; text-align: center; }
-    nav ul { list-style: none; padding: 0; margin: 10px 0; }
-    nav li { display: inline; margin: 0 15px; }
-    nav a { color: white; text-decoration: none; font-weight: bold; }
-    nav a:hover { text-decoration: underline; }
-    main { max-width: 500px; margin: 50px auto; padding: 30px; background: white; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-    h1 { color: #4CAF50; text-align: center; }
-    .form-group { margin-bottom: 20px; }
-    label { display: block; margin-bottom: 6px; font-weight: bold; }
-    input { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
-    button { width: 100%; padding: 12px; background: #4CAF50; color: white; border: none; border-radius: 6px; font-size: 1.1em; cursor: pointer; }
-    button:hover { background: #45a049; }
-    #poruka { margin-top: 15px; text-align: center; min-height: 20px; }
-    footer { text-align: center; padding: 20px; background: #333; color: white; margin-top: 50px; }
+    body { font-family: 'Segoe UI', sans-serif; background: #f8f9f5; margin:0; padding:0; }
+    header { background: #2e7d32; color: white; padding: 1rem; text-align: center; }
+    nav a { color: white; margin: 0 1rem; text-decoration: none; }
+    .container { max-width: 500px; margin: 4rem auto; padding: 2rem; background: white; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
+    h1 { color: #2e7d32; text-align: center; }
+    label { display: block; margin: 1rem 0 0.5rem; font-weight: bold; }
+    input { width: 100%; padding: 0.8rem; margin-bottom: 1rem; border: 1px solid #ccc; border-radius: 6px; }
+    button { background: #2e7d32; color: white; border: none; padding: 1rem; width: 100%; border-radius: 6px; cursor: pointer; font-size: 1.1rem; }
+    button:hover { background: #4caf50; }
+    .error { color: red; text-align: center; margin-top: 1rem; }
   </style>
 </head>
 <body>
 
-  <header>
-    <h2>Lokalni Plodovi</h2>
-    <nav>
-      <ul>
-        <li><a href="index.html">Početna</a></li>
-        <li><a href="prodavci.html">Svi prodavci</a></li>
-        <li><a href="mapa.html">Mapa</a></li>
-        <li><a href="chat.html">Chat</a></li>
-        <li><a href="login.html">Prijavi se</a></li>
-        <li><a href="registracija.html">Postani prodavac</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <h1>LokalniPlodovi</h1>
+  <nav>
+    <a href="inex.html">Početna</a>
+    <a href="prodavci.html">Svi prodavci</a>
+    <a href="mapa.html">Mapa</a>
+    <a href="chat.html">Chat</a>
+  </nav>
+</header>
 
-  <main>
-    <h1>Prijava</h1>
+<div class="container">
+  <h1>Prijavi se</h1>
+  <form id="login-form">
+    <label for="email">Email</label>
+    <input type="email" id="email" required>
 
-    <form id="login-form">
-      <div class="form-group">
-        <label for="email">Email *</label>
-        <input type="email" id="email" required />
-      </div>
+    <label for="lozinka">Lozinka</label>
+    <input type="password" id="lozinka" required>
 
-      <div class="form-group">
-        <label for="lozinka">Lozinka *</label>
-        <input type="password" id="lozinka" required minlength="6" />
-      </div>
+    <button type="submit">Prijavi se</button>
+  </form>
 
-      <button type="submit">Prijavi se</button>
-    </form>
+  <p style="text-align:center; margin-top:1.5rem;">
+    Nemaš nalog? <a href="registracija.html">Registruj se</a>
+  </p>
 
-    <p id="poruka"></p>
-  </main>
+  <p id="poruka" class="error"></p>
+</div>
 
-  <footer>
-    © 2025 LokalniPlodovi • Sva prava zadržana
-  </footer>
+<script>
+  const backendUrl = 'https://tvoj-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL
 
-  <script>
-    document.getElementById('login-form').addEventListener('submit', async function(e) {
-      e.preventDefault();
+  document.getElementById('login-form').addEventListener('submit', async function(e) {
+    e.preventDefault();
 
-      const poruka = document.getElementById('poruka');
-      poruka.textContent = 'Prijavljujem...';
-      poruka.style.color = 'blue';
+    const email = document.getElementById('email').value.trim();
+    const lozinka = document.getElementById('lozinka').value.trim();
+    const poruka = document.getElementById('poruka');
 
-      const podaci = {
-        email: document.getElementById('email').value.trim(),
-        lozinka: document.getElementById('lozinka').value
-      };
+    poruka.textContent = '';
 
-      if (!podaci.email || !podaci.lozinka) {
-        poruka.textContent = 'Unesite email i lozinku!';
-        poruka.style.color = 'red';
-        return;
+    if (!email || !lozinka) {
+      poruka.textContent = 'Molimo popunite sva polja!';
+      return;
+    }
+
+    try {
+      const response = await fetch(`${backendUrl}/login`, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ email, lozinka })
+      });
+
+      const result = await response.json();
+
+      if (response.ok) {
+        localStorage.setItem('token', result.token);
+        alert('Uspešno ste se prijavili!');
+        window.location.href = 'moj-profil.html';
+      } else {
+        poruka.textContent = result.error || 'Pogrešan email ili lozinka';
       }
-
-      try {
-        const response = await fetch('https://lokalni-backend.onrender.com/login', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(podaci)
-        });
-
-        const data = await response.json();
-
-        if (!response.ok) {
-          throw new Error(data.error || 'Pogrešan email ili lozinka');
-        }
-
-        poruka.style.color = 'green';
-        poruka.textContent = data.message || 'Dobrodošao nazad!';
-
-        localStorage.setItem('authToken', data.token);
-        localStorage.setItem('user', JSON.stringify(data.user));
-
-        setTimeout(() => {
-          window.location.href = 'moj-profil.html';
-        }, 1500);
-
-      } catch (err) {
-        poruka.style.color = 'red';
-        poruka.textContent = err.message;
-        console.error('Greška pri prijavi:', err);
-      }
-    });
-  </script>
+    } catch (err) {
+      poruka.textContent = 'Greška sa serverom: ' + err.message;
+    }
+  });
+</script>
 
 </body>
 </html>
