--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
 </div>
 
 <script>
-  const backendUrl = 'https://tvoj-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL
+  const backendUrl = 'https://lokalni-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL
 
   document.getElementById('login-form').addEventListener('submit', async function(e) {
     e.preventDefault();
@@ -90,6 +90,7 @@
 
 </body>
 </html>
+
 
 
 
