--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
 <header>
   <h1>LokalniPlodovi</h1>
   <nav>
-    <a href="inex.html">Početna</a>
+    <a href="index.html">Početna</a>
     <a href="prodavci.html">Svi prodavci</a>
     <a href="mapa.html">Mapa</a>
     <a href="chat.html">Chat</a>
@@ -90,6 +90,7 @@
 
 </body>
 </html>
+
 
 
 
