--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   }
 
   function odjaviSe() {
-    localStorage.removeItem('trenutniKorisnik');
+    localStorage.removeItem('token');
     window.location.href = 'index.html';
   }
 </script>
@@ -307,6 +307,7 @@ s0.parentNode.insertBefore(s1,s0);
 </body>
 
 </html>
+
 
 
 
