--- a/moj-profil.html
+++ b/moj-profil.html
@@ -11,6 +11,8 @@
       --zelena-svetla: #4caf50;
       --zemlja: #5d4037;
       --svetlo: #f8f9f5;
+      --siva: #757575;
+      --tamno-siva: #424242;
       --belo: #ffffff;
     }
 
@@ -19,7 +21,7 @@
     body {
       font-family: 'Segoe UI', system-ui, sans-serif;
       background: var(--svetlo);
-      color: #333;
+      color: var(--tamno-siva);
       line-height: 1.6;
       min-height: 100vh;
       display: flex;
@@ -27,7 +29,7 @@
     }
 
     header {
-      background: rgba(46, 125, 50, 0.94);
+      background: var(--zelena);
       color: white;
       padding: 1rem 2rem;
       position: sticky;
@@ -58,48 +60,109 @@
       color: white;
       text-decoration: none;
       font-weight: 500;
+      transition: 0.2s;
     }
 
-    .container {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 2rem;
+    nav a:hover { color: #c8e6c9; }
+
+    .profile-header {
       background: white;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      margin: 2rem auto;
+      max-width: 900px;
+      padding: 2rem;
+      display: flex;
+      gap: 2.5rem;
+      flex-wrap: wrap;
     }
 
-    h1 {
-      color: var(--zelena);
-      text-align: center;
-      margin-bottom: 2rem;
+    .profile-avatar {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 4px solid var(--zelena);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.15);
     }
 
-    #profil-info p {
-      margin: 1rem 0;
+    .profile-info {
+      flex: 1;
+      min-width: 300px;
+    }
+
+    .profile-name {
+      font-size: 2.2rem;
+      color: var(--tamno-siva);
+      margin-bottom: 0.5rem;
+    }
+
+    .profile-bio {
       font-size: 1.1rem;
+      color: var(--siva);
+      margin-bottom: 1.5rem;
+      line-height: 1.5;
     }
 
-    button {
+    .profile-details {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      gap: 0.8rem 1.5rem;
+      font-size: 1.05rem;
+    }
+
+    .profile-details strong {
+      color: var(--zelena);
+    }
+
+    .btn {
       background: var(--zelena);
       color: white;
       border: none;
-      padding: 1rem 2rem;
+      padding: 0.8rem 1.8rem;
       border-radius: 50px;
       cursor: pointer;
-      font-size: 1.1rem;
+      font-size: 1rem;
+      transition: 0.2s;
+      margin-top: 1.5rem;
     }
 
-    button:hover {
+    .btn:hover {
       background: var(--zelena-svetla);
+    }
+
+    .btn-outline {
+      background: transparent;
+      border: 2px solid var(--zelena);
+      color: var(--zelena);
+    }
+
+    .btn-outline:hover {
+      background: var(--zelena);
+      color: white;
     }
 
     footer {
       background: var(--zemlja);
       color: white;
       text-align: center;
-      padding: 3rem 1rem;
+      padding: 2rem 1rem;
       margin-top: auto;
+    }
+
+    @media (max-width: 768px) {
+      .profile-header {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .profile-avatar {
+        margin: 0 auto;
+      }
+
+      .profile-details {
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
@@ -109,31 +172,47 @@
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
-      <li><a href="index.html">Početna</a></li>
-      <li><a href="prodavci.html">Svi prodavci</a></li>
-      <li><a href="mapa.html">Mapa</a></li>
-      <li><a href="chat.html">Chat</a></li>
+      <li><a href="/">Početna</a></li>
+      <li><a href="/prodavci">Svi prodavci</a></li>
+      <li><a href="/mapa">Mapa</a></li>
+      <li><a href="/chat">Chat</a></li>
 
       <li id="moj-profil-li" style="display:none;">
-        <a href="moj-profil.html">Moj profil</a>
+        <a href="/moj-profil">Moj profil</a>
       </li>
       <li id="odjavi-se-li" style="display:none;">
         <a href="#" onclick="odjaviSe()">Odjavi se</a>
       </li>
 
       <li id="prijavi-se-li">
-        <a href="login.html">Prijavi se</a>
+        <a href="/login">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="registracija.html">Postani prodavac</a>
+        <a href="/prijava-prodavca">Postani prodavac</a>
       </li>
     </ul>
   </nav>
 </header>
 
-<div class="container">
-  <h1>Moj profil</h1>
-  <div id="profil-info">Učitavanje podataka...</div>
+<div class="profile-header">
+  <img src="https://via.placeholder.com/180?text=Profilna+Slika" alt="Profilna slika" class="profile-avatar" id="profile-avatar">
+
+  <div class="profile-info">
+    <h1 class="profile-name" id="profile-name">Učitavanje...</h1>
+    <p class="profile-bio" id="profile-bio">Opis domaćinstva...</p>
+
+    <div class="profile-details">
+      <strong>Email:</strong> <span id="email">Učitavanje...</span>
+      <strong>Telefon:</strong> <span id="telefon">Učitavanje...</span>
+      <strong>Lokacija:</strong> <span id="lokacija">Učitavanje...</span>
+      <strong>Niše:</strong> <span id="nise">Učitavanje...</span>
+      <strong>Opis:</strong> <span id="opis">Učitavanje...</span>
+      <strong>Registrovan:</strong> <span id="registeredAt">Učitavanje...</span>
+    </div>
+
+    <button class="btn" onclick="odjaviSe()">Odjavi se</button>
+    <button class="btn btn-outline" onclick="alert('Funkcija izmene profila još nije gotova')">Izmeni profil</button>
+  </div>
 </div>
 
 <footer>
@@ -143,11 +222,15 @@
     <p style="margin-top:2rem; opacity:0.9;">© 2025 LokalniPlodovi • Sva prava zadržana</p>
   </div>
 </footer>
-<script>
-  const backendUrl = 'https://lokalni-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL
 
-  function azurirajHeader() {
+<script>
+  const backendUrl = 'https://tvoj-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL (npr. https://lokalni-backend.onrender.com)
+
+  async function ucitajProfil() {
     const token = localStorage.getItem('token');
+    const profilInfo = document.getElementById('profil-info');
+
+    // Ažuriraj header
     if (token) {
       document.getElementById('moj-profil-li').style.display = 'list-item';
       document.getElementById('odjavi-se-li').style.display = 'list-item';
@@ -159,20 +242,11 @@
       document.getElementById('prijavi-se-li').style.display = 'list-item';
       document.getElementById('postani-prodavac-li').style.display = 'list-item';
     }
-  }
-
-  async function ucitajProfil() {
-    azurirajHeader();
-
-    const token = localStorage.getItem('token');
-    const profilInfo = document.getElementById('profil-info');
 
     if (!token) {
       profilInfo.innerHTML = `<p>Niste ulogovani. <a href="registracija.html">Registrujte se</a> ili <a href="login.html">prijavite se</a>.</p>`;
       return;
     }
-
-    console.log('Šaljem token na /profile:', token); // za proveru
 
     try {
       const response = await fetch(`${backendUrl}/profile`, {
@@ -183,27 +257,23 @@
         }
       });
 
-      console.log('Status:', response.status); // za proveru
-
       if (!response.ok) {
-        const errorData = await response.json();
-        throw new Error(errorData.error || `Greška ${response.status}`);
+        throw new Error(`Greška ${response.status}`);
       }
 
       const data = await response.json();
 
-      console.log('Podaci sa servera:', data); // za proveru
+      // Popuni podatke
+      document.getElementById('profile-name').textContent = data.ime || 'Korisnik';
+      document.getElementById('email').textContent = data.email || 'N/A';
+      document.getElementById('telefon').textContent = data.telefon || 'Nije navedeno';
+      document.getElementById('lokacija').textContent = data.lokacija || 'Nije navedeno';
+      document.getElementById('nise').textContent = data.nise ? data.nise.join(', ') : 'Nijedna';
+      document.getElementById('opis').textContent = data.opis || 'Nema opisa';
+      document.getElementById('registeredAt').textContent = data.registeredAt ? new Date(data.registeredAt).toLocaleString() : 'N/A';
 
-      profilInfo.innerHTML = `
-        <h2>Dobrodošao, ${data.ime || 'Korisnik'}!</h2>
-        <p><strong>Email:</strong> ${data.email || 'N/A'}</p>
-        <p><strong>Telefon:</strong> ${data.telefon || 'Nije navedeno'}</p>
-        <p><strong>Lokacija:</strong> ${data.lokacija || 'Nije navedeno'}</p>
-        <p><strong>Niše:</strong> ${data.nise ? data.nise.join(', ') : 'Nijedna'}</p>
-        <p><strong>Opis:</strong> ${data.opis || 'Nema opisa'}</p>
-        <p><strong>Registrovan:</strong> ${data.registeredAt ? new Date(data.registeredAt).toLocaleString() : 'N/A'}</p>
-        <button onclick="odjaviSe()">Odjavi se</button>
-      `;
+      // Profilna slika (za sada placeholder – kasnije dodaj upload)
+      document.getElementById('profile-avatar').src = data.slika || 'https://via.placeholder.com/180?text=' + encodeURIComponent(data.ime?.charAt(0) || 'P');
     } catch (err) {
       console.error('Greška pri učitavanju profila:', err);
       profilInfo.innerHTML = `<p>Greška pri učitavanju profila: ${err.message}</p>`;
@@ -212,7 +282,7 @@
 
   function odjaviSe() {
     localStorage.removeItem('token');
-    window.location.href = 'index.html';
+    window.location.href = '/';
   }
 
   document.addEventListener('DOMContentLoaded', ucitajProfil);
@@ -220,7 +290,6 @@
 
 </body>
 </html>
-
 
 
 
