--- a/moj-profil.html
+++ b/moj-profil.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+     <!DOCTYPE html>
 <html lang="sr">
 <head>
   <meta charset="UTF-8" />
@@ -12,7 +12,7 @@
       --zemlja: #5d4037;
       --svetlo: #f8f9f5;
       --siva: #757575;
-      --tamno-siva: #424242;
+      --tamno: #333;
       --belo: #ffffff;
     }
 
@@ -21,8 +21,7 @@
     body {
       font-family: 'Segoe UI', system-ui, sans-serif;
       background: var(--svetlo);
-      color: var(--tamno-siva);
-      line-height: 1.6;
+      color: var(--tamno);
       min-height: 100vh;
       display: flex;
       flex-direction: column;
@@ -39,11 +38,11 @@
     }
 
     nav {
+      max-width: 1400px;
+      margin: 0 auto;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      max-width: 1400px;
-      margin: 0 auto;
     }
 
     .logo { font-size: 1.8rem; font-weight: 700; }
@@ -65,71 +64,116 @@
 
     nav a:hover { color: #c8e6c9; }
 
-    .profile-header {
+    .profile-container {
+      max-width: 1000px;
+      margin: 3rem auto;
+      padding: 0 1.5rem;
+    }
+
+    .profile-card {
       background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      margin: 2rem auto;
-      max-width: 900px;
-      padding: 2rem;
-      display: flex;
-      gap: 2.5rem;
-      flex-wrap: wrap;
+      border-radius: 16px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.1);
+      overflow: hidden;
+    }
+
+    .profile-top {
+      background: linear-gradient(135deg, var(--zelena) 0%, var(--zelena-svetla) 100%);
+      padding: 3rem 2rem 1rem;
+      color: white;
+      text-align: center;
+      position: relative;
+    }
+
+    .profile-avatar-wrapper {
+      position: absolute;
+      bottom: -60px;
+      left: 50%;
+      transform: translateX(-50%);
+      border: 6px solid white;
+      border-radius: 50%;
+      overflow: hidden;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
     }
 
     .profile-avatar {
-      width: 180px;
-      height: 180px;
-      border-radius: 50%;
+      width: 140px;
+      height: 140px;
       object-fit: cover;
-      border: 4px solid var(--zelena);
-      box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+      border-radius: 50%;
     }
 
     .profile-info {
-      flex: 1;
-      min-width: 300px;
+      padding: 5rem 2rem 2rem;
+      text-align: center;
     }
 
     .profile-name {
       font-size: 2.2rem;
-      color: var(--tamno-siva);
-      margin-bottom: 0.5rem;
+      margin: 0.5rem 0;
+      color: var(--tamno);
     }
 
     .profile-bio {
       font-size: 1.1rem;
       color: var(--siva);
-      margin-bottom: 1.5rem;
-      line-height: 1.5;
+      max-width: 600px;
+      margin: 1rem auto;
+      line-height: 1.6;
     }
 
     .profile-details {
       display: grid;
-      grid-template-columns: 1fr 2fr;
-      gap: 0.8rem 1.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+      margin-top: 2rem;
+    }
+
+    .detail-item {
+      background: var(--svetlo);
+      padding: 1.2rem;
+      border-radius: 12px;
+      border: 1px solid #eee;
+      transition: 0.2s;
+    }
+
+    .detail-item:hover {
+      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+    }
+
+    .detail-label {
+      color: var(--zelena);
+      font-weight: 600;
+      margin-bottom: 0.4rem;
+      display: block;
+    }
+
+    .detail-value {
       font-size: 1.05rem;
     }
 
-    .profile-details strong {
-      color: var(--zelena);
+    .buttons {
+      margin-top: 2.5rem;
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
     }
 
     .btn {
-      background: var(--zelena);
-      color: white;
-      border: none;
-      padding: 0.8rem 1.8rem;
+      padding: 0.9rem 2rem;
       border-radius: 50px;
+      font-size: 1.05rem;
       cursor: pointer;
-      font-size: 1rem;
       transition: 0.2s;
-      margin-top: 1.5rem;
+      border: none;
     }
 
-    .btn:hover {
-      background: var(--zelena-svetla);
+    .btn-primary {
+      background: var(--zelena);
+      color: white;
     }
+
+    .btn-primary:hover { background: var(--zelena-svetla); }
 
     .btn-outline {
       background: transparent;
@@ -151,18 +195,9 @@
     }
 
     @media (max-width: 768px) {
-      .profile-header {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      .profile-avatar {
-        margin: 0 auto;
-      }
-
-      .profile-details {
-        grid-template-columns: 1fr;
-      }
+      .profile-top { padding: 4rem 1.5rem 1rem; }
+      .profile-avatar-wrapper { bottom: -50px; }
+      .profile-avatar { width: 120px; height: 120px; }
     }
   </style>
 </head>
@@ -195,40 +230,65 @@
 </header>
 
 <div class="profile-header">
-  <img src="https://via.placeholder.com/180?text=Profilna+Slika" alt="Profilna slika" class="profile-avatar" id="profile-avatar">
+  <div class="profile-avatar-wrapper">
+    <img src="https://via.placeholder.com/140?text=Boris" alt="Profilna slika" class="profile-avatar" id="profile-avatar">
+  </div>
 
   <div class="profile-info">
     <h1 class="profile-name" id="profile-name">Učitavanje...</h1>
     <p class="profile-bio" id="profile-bio">Opis domaćinstva...</p>
 
     <div class="profile-details">
-      <strong>Email:</strong> <span id="email">Učitavanje...</span>
-      <strong>Telefon:</strong> <span id="telefon">Učitavanje...</span>
-      <strong>Lokacija:</strong> <span id="lokacija">Učitavanje...</span>
-      <strong>Niše:</strong> <span id="nise">Učitavanje...</span>
-      <strong>Opis:</strong> <span id="opis">Učitavanje...</span>
-      <strong>Registrovan:</strong> <span id="registeredAt">Učitavanje...</span>
+      <div class="detail-item">
+        <span class="detail-label">Email</span>
+        <span class="detail-value" id="email">Učitavanje...</span>
+      </div>
+      <div class="detail-item">
+        <span class="detail-label">Telefon</span>
+        <span class="detail-value" id="telefon">Učitavanje...</span>
+      </div>
+      <div class="detail-item">
+        <span class="detail-label">Lokacija</span>
+        <span class="detail-value" id="lokacija">Učitavanje...</span>
+      </div>
+      <div class="detail-item">
+        <span class="detail-label">Niše</span>
+        <span class="detail-value" id="nise">Učitavanje...</span>
+      </div>
+      <div class="detail-item">
+        <span class="detail-label">Opis</span>
+        <span class="detail-value" id="opis">Učitavanje...</span>
+      </div>
+      <div class="detail-item">
+        <span class="detail-label">Registrovan</span>
+        <span class="detail-value" id="registeredAt">Učitavanje...</span>
+      </div>
     </div>
 
-    <button class="btn" onclick="odjaviSe()">Odjavi se</button>
-    <button class="btn btn-outline" onclick="alert('Funkcija izmene profila još nije gotova')">Izmeni profil</button>
+    <div class="buttons">
+      <button class="btn btn-primary" onclick="odjaviSe()">Odjavi se</button>
+      <button class="btn btn-outline" onclick="alert('Izmena profila uskoro')">Izmeni profil</button>
+    </div>
   </div>
 </div>
 
 <footer>
-  <div class="container">
-    <h2>LokalniPlodovi</h2>
-    <p>Prirodno • Sezonski • Direktno sa imanja Srbije</p>
-    <p style="margin-top:2rem; opacity:0.9;">© 2025 LokalniPlodovi • Sva prava zadržana</p>
-  </div>
+  <p>© 2025 LokalniPlodovi • Sva prava zadržana</p>
 </footer>
 
 <script>
-  const backendUrl = 'https://tvoj-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL (npr. https://lokalni-backend.onrender.com)
+  const backendUrl = 'https://lokalni-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL
 
   async function ucitajProfil() {
     const token = localStorage.getItem('token');
-    const profilInfo = document.getElementById('profil-info');
+    const profilName = document.getElementById('profile-name');
+    const profilBio = document.getElementById('profile-bio');
+    const emailEl = document.getElementById('email');
+    const telefonEl = document.getElementById('telefon');
+    const lokacijaEl = document.getElementById('lokacija');
+    const niseEl = document.getElementById('nise');
+    const opisEl = document.getElementById('opis');
+    const registeredAtEl = document.getElementById('registeredAt');
 
     // Ažuriraj header
     if (token) {
@@ -244,7 +304,8 @@
     }
 
     if (!token) {
-      profilInfo.innerHTML = `<p>Niste ulogovani. <a href="registracija.html">Registrujte se</a> ili <a href="login.html">prijavite se</a>.</p>`;
+      profilName.textContent = 'Niste ulogovani';
+      profilBio.textContent = 'Registrujte se ili prijavite.';
       return;
     }
 
@@ -263,20 +324,21 @@
 
       const data = await response.json();
 
-      // Popuni podatke
-      document.getElementById('profile-name').textContent = data.ime || 'Korisnik';
-      document.getElementById('email').textContent = data.email || 'N/A';
-      document.getElementById('telefon').textContent = data.telefon || 'Nije navedeno';
-      document.getElementById('lokacija').textContent = data.lokacija || 'Nije navedeno';
-      document.getElementById('nise').textContent = data.nise ? data.nise.join(', ') : 'Nijedna';
-      document.getElementById('opis').textContent = data.opis || 'Nema opisa';
-      document.getElementById('registeredAt').textContent = data.registeredAt ? new Date(data.registeredAt).toLocaleString() : 'N/A';
+      profilName.textContent = data.ime || 'Korisnik';
+      profilBio.textContent = data.opis || 'Opis domaćinstva...';
+      emailEl.textContent = data.email || 'N/A';
+      telefonEl.textContent = data.telefon || 'Nije navedeno';
+      lokacijaEl.textContent = data.lokacija || 'Nije navedeno';
+      niseEl.textContent = data.nise ? data.nise.join(', ') : 'Nijedna';
+      opisEl.textContent = data.opis || 'Nema opisa';
+      registeredAtEl.textContent = data.registeredAt ? new Date(data.registeredAt).toLocaleString() : 'N/A';
 
-      // Profilna slika (za sada placeholder – kasnije dodaj upload)
-      document.getElementById('profile-avatar').src = data.slika || 'https://via.placeholder.com/180?text=' + encodeURIComponent(data.ime?.charAt(0) || 'P');
+      // Profilna slika (za sada placeholder – kasnije upload)
+      document.getElementById('profile-avatar').src = data.slika || 'https://via.placeholder.com/140?text=' + encodeURIComponent(data.ime?.charAt(0) || 'B');
     } catch (err) {
       console.error('Greška pri učitavanju profila:', err);
-      profilInfo.innerHTML = `<p>Greška pri učitavanju profila: ${err.message}</p>`;
+      profilName.textContent = 'Greška';
+      profilBio.textContent = 'Ne mogu da učitam podatke. Probajte ponovo.';
     }
   }
 
@@ -290,7 +352,3 @@
 
 </body>
 </html>
-
-
-
-
